# footage_analyzer

./: .gitignore  main.py  pyproject.toml  requirements.txt
footage_analyzer/: analyzer.py  csv_writer.py  videoData.py
